--- a/pages/productos.html
+++ b/pages/productos.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="keywords" content="rimmel, productos, natural, perfume">
+    <meta name="description" content="BeautyHome ofrece los mejores productos naturales para tu cuerpo. Conseguilos acá!">
+    <title>BeautyHome | PRODUCTOS</title>
     <title>BeautyHome</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
-      crossorigin="anonymous"
-    />
-    <link rel="shortcut icon" href="../img/favicon.png" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous"/>
+    <link rel="shortcut icon" href="https://res.cloudinary.com/dqsphdqv5/image/upload/v1656513298/proyecto-beautyhome/favicon_sldqfc.png">
     <link rel="stylesheet" href="../css/style.css" />
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script type="text/javascript"> emailjs.init('xGeXvyMHQpqa9a2d6')</script>
   </head>
   <body>
     <!-- header -->
@@ -92,11 +92,11 @@
         <h4 class="col-xs-12 tituloFooter d-flex justify-content-center py-2 animate__animated animate__headShake">Tenes alguna duda? Contactános!</h4>
         <div class="row d-flex justify-content-center">
             <div class="col-lg-4 col-md-5 col-xs-12 align-items-strech"> 
-                <form action="#" method="get" class="d-flex flex-column justify-content-between cajaFormulario mx-5 " >
-                    <input type="text" placeholder="nombre completo" name="nombre-completo"  class="textoFantasma">
-                    <input type="email" placeholder="example@gmial.com" class="textoFantasma">
-                    <textarea name="comentario" placeholder="escribínos tu comentario!" id="" cols="30" rows="8" class="textoFantasma"></textarea>
-                    <input type="submit" class="botonSubmit" value="ENVIAR">
+                <form id="form" action="#" method="get" class="d-flex flex-column justify-content-between cajaFormulario mx-5 " >
+                    <input type="text" placeholder="nombre completo" name="from_name" id="from_name"  class="textoFantasma">
+                    <input type="email" placeholder="example@gmial.com" name="email_id" id="email_id" class="textoFantasma">
+                    <textarea placeholder="escribínos tu comentario!" cols="30" rows="8" name="message" id="message" class="textoFantasma"></textarea>
+                    <input type="submit" class="botonSubmit"  id="button" value="ENVIAR">
                     <label for="">
                         <input type="checkbox">
                         <span>Suscribirme al newsletter</span>
@@ -127,12 +127,9 @@
                     </div>
         </div>
     </footer>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <script src="../js/index.js"></script>
+    <script src="../js/formulario.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </body>
 </html>
