--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -10,6 +10,8 @@
         <link rel="shortcut icon" href="https://res.cloudinary.com/dqsphdqv5/image/upload/v1656513298/proyecto-beautyhome/favicon_sldqfc.png">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
         <link rel="stylesheet" href="../css/style.css">
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+        <script type="text/javascript"> emailjs.init('xGeXvyMHQpqa9a2d6')</script>
     </head>
 <body>
     <header>
@@ -80,11 +82,11 @@
         <h2 class="col-xs-12 tituloFooter d-flex justify-content-center py-2 animate__animated animate__headShake">Tenes alguna duda? Contactános!</h2>
         <div class="row d-flex justify-content-center">
             <div class="col-lg-4 col-md-5 col-xs-12 align-items-strech"> 
-                <form action="#" method="get" class="d-flex flex-column justify-content-between cajaFormulario mx-5 " >
-                    <input type="text" placeholder="nombre completo" name="nombre-completo"  class="textoFantasma">
-                    <input type="email" placeholder="example@gmial.com" class="textoFantasma">
-                    <textarea name="comentario" placeholder="escribínos tu comentario!" id="" cols="30" rows="8" class="textoFantasma"></textarea>
-                    <input type="submit" class="botonSubmit" value="ENVIAR">
+                <form id="form" action="#" method="get" class="d-flex flex-column justify-content-between cajaFormulario mx-5 " >
+                    <input type="text" placeholder="nombre completo" name="from_name" id="from_name"  class="textoFantasma">
+                    <input type="email" placeholder="example@gmial.com" name="email_id" id="email_id" class="textoFantasma">
+                    <textarea placeholder="escribínos tu comentario!" cols="30" rows="8" name="message" id="message" class="textoFantasma"></textarea>
+                    <input type="submit" class="botonSubmit"  id="button" value="ENVIAR">
                     <label for="">
                         <input type="checkbox">
                         <span>Suscribirme al newsletter</span>
@@ -117,19 +119,11 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <script src="../js/WOW.js"></script>
+    <script src="../js/formulario.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script>
     new WOW().init();
     </script>
-    <script>
-        const btn_scrolltop = document.getElementById("btn_scrolltop")
-          btn_scrolltop.addEventListener('click', () => {
-            window.scrollTo(0, 0)
-          })
-    
-        window.onscroll = () => {
-          add_btn_scrolltop()
-        }
-    
       </script>
 </body>
 </html>
